openshift/07-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ktarasrha-dev
  labels:
    app: worker
  annotations:
    kubernetes.io/change-cause: "Initial deployment v1.0.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: ticketing-sa
      containers:
        - name: worker
          image: quay.io/TVOJ_USERNAME/ticketing-worker:1.0.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          livenessProbe:
            exec:
              command: ["node", "-e", "process.exit(0)"]
            initialDelaySeconds: 15
            periodSeconds: 30
