openshift/08-routes.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: ktarasrha-dev
  labels:
    app: frontend
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
  namespace: ktarasrha-dev
  labels:
    app: api
spec:
  to:
    kind: Service
    name: api
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
